corrigindo erro ortográfico no yaml

--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -4,12 +4,12 @@ on: push
 
 jobs:
   echo-ola:
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Ola mundo
         run: echo "Hello, world!"
   echo-tchau:
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Erro
         run: |
