--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,6 +1,8 @@
 name: 06 - Contexts
 
-on: push
+on:
+  push:
+  workflow_dispatch:
 
 jobs:
   echo-data:
@@ -15,3 +17,6 @@ jobs:
           echo "Workflow: ${{github.workflow}}"
           echo "Run ID: ${{github.run_id}}"
           echo "Run Number: ${{github.run_number}}"
+      - name: Retornar Variável
+        run: |
+          echo "Valor da Variável: ${{vars.MY_VAR}}"
